# misis2024s-23-03-pluzhnikov-a-a

./: .gitignore  CMakeLists.txt  codeforces.id  status.md
prj.codeforces/: 0004a.cpp  0155a.cpp  0263a.cpp  0271a.cpp  0276a.cpp  0617a.cpp  0935b.cpp  0978a.cpp  0978b.cpp  1330a.cpp  1352a.cpp  1404a.cpp  1512c.cpp  1585a.cpp  1670b.cpp  1690d.cpp  1717b.cpp  1721b.cpp  1734b.cpp  1872a.cpp  1873c.cpp  CMakeLists.txt
prj.lab/: CMakeLists.txt
prj.lab/QueueArr/: CMakeLists.txt  QueueArr.cpp  QueueArr.h
prj.lab/QueueLst/: CMakeLists.txt  QueueLst.cpp  QueueLst.h
prj.lab/QueueLstPr/: CMakeLists.txt  QueueLstPr.cpp  QueueLstPr.h
prj.lab/StackArr/: CMakeLists.txt  StackArr.cpp  StackArr.h
prj.lab/StackLst/: CMakeLists.txt  StackLst.cpp  StackLst.h
prj.lab/complex/: complex.cpp  complex.hpp
prj.lab/dynarr/: dynarr.hpp
prj.lab/rational/: rational.cpp  rational.hpp
prj.test/: CMakeLists.txt  complex_test.cpp  doctest.h  dynarr_test.cpp  rational_test.cpp  test_QueueArr.cpp  test_QueueLst.cpp  test_QueueLstPr.cpp  test_StackArr.cpp  test_StackLst.cpp
